scm-ui/ui-styles/src/light.scss
/*
 * MIT License
 *
 * Copyright (c) 2020-present Cloudogu GmbH and Contributors
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

@import "utils/_pre.scss";
// colors defined in variables/commons.scss
$subtitle-color: #666;
$warning-invert: #88550d;
$button-disabled-opacity: 0.25;

@import "utils/_post.scss";

:root {
  --sh-base-color: #363636;
  --sh-font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
  --sh-block-background: #ffffff;
  --sh-inline-code-color: #ff3860;
  --sh-inline-code-background: #fbe7eb;
  --sh-comment-color: #9a9a9a;
  --sh-punctuation-color: #9a9a9a;
  --sh-property-color: #2c99c7;
  --sh-selector-color: #005f9a;
  --sh-operator-color: #686868;
  --sh-operator-bg: inherit;
  --sh-variable-color: #a74eb2;
  --sh-function-color: #ff3860;
  --sh-keyword-color: #00a984;
  --sh-selected-color: #7fe3cd;
  --sh-highlight-background: #f5f5f5;
  --sh-highlight-accent: #99d8f3;
}

.popover:before {
  border-bottom-color: white;
  border-left-color: white;
  box-shadow: -1px 1px 2px rgba(10, 10, 10, 0.2);
}

.notifications .dropdown-menu:before {
  border-bottom-color: white;
  border-left-color: white;
}

.has-text-secondary-least {
  color: $white !important;
}
a.has-text-secondary-least:hover,
a.has-text-secondary-least:focus {
  color: lighten($white, 10%) !important;
}
.has-background-secondary-least {
  background-color: $white !important;
}

.has-text-secondary-less {
  color: $white-ter !important;
}
a.has-text-secondary-less:hover,
a.has-text-secondary-less:focus {
  color: lighten($white-ter, 10%) !important;
}
.has-background-secondary-less {
  background-color: $white-ter !important;
}

.has-text-secondary {
  color: $grey-light !important;
}
a.has-text-secondary:hover,
a.has-text-secondary:focus {
  color: lighten($grey-light, 10%) !important;
}
.has-background-secondary {
  background-color: $grey-light !important;
}

.has-text-secondary-more {
  color: $grey-darker !important;
}
a.has-text-secondary-more:hover,
a.has-text-secondary-more:focus {
  color: lighten($grey-darker, 10%) !important;
}
.has-background-secondary-more {
  background-color: $grey-darker !important;
}

.has-text-secondary-most {
  color: $black !important;
}
a.has-text-secondary-most:hover,
a.has-text-secondary-most:focus {
  color: lighten($black, 10%) !important;
}
.has-background-secondary-most {
  background-color: $black !important;
}

.has-hover-visible:hover {
  color: $grey-darker !important;
}

